<resources>
  <string name="app_name">app_20250731</string>
  <string name="toast">토스트 메시지</string>
  <string name="toast_callback">토스트 메시지 콜백</string>
  <string name="date_picker">데이트 픽커(달력) 사용하기</string>
  <string name="time_picker">타임 픽커(시계) 사용하기</string>
  <string name="alert_dialog">알림 다이얼로그 사용하기</string>
  <string name="alert_dialog_list">알림 다이얼로그 목록 사용하기</string>
  <string name="alert_dialog_checkbox">알림 다이얼로그 체크박스 사용하기</string>
  <string name="alert_dialog_radio">알림 다이얼로그 라디오버튼 사용하기</string>
  <string name="alert_sound">사운드 알림 사용하기</string>
  <string name="alert_media_player">Media Player 사운드 알림 사용하기</string>
  <string name="alert_media_player_stop">Media Player 사운드 알림 정지</string>
  <string name="alert_vibrator">진동 알림 사용하기</string>
  <string name="alert_notification">안드로이드 상단 알림창 사용하기</string>
</resources>