<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/main">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
      android:id="@+id/btn_toast"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/toast"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_toast_callback"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/toast_callback"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_date_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/date_picker"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_time_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/time_picker"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_alert_dialog"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_dialog"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_alert_dialog_list"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_dialog_list"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_alert_dialog_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_dialog_checkbox"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_alert_dialog_radio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_dialog_radio"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_alert_sound"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_sound"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_media_player"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_media_player"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_media_player_stop"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_media_player_stop"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_vibrator"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_vibrator"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />

    <Button
      android:id="@+id/btn_notification"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/alert_notification"
      android:layout_marginTop="4dp"
      android:layout_marginHorizontal="4dp" />
  </LinearLayout>
</ScrollView>













